ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncModule_es6/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncModule_es6/input.ts:3:7
  |
3 | async module M {   
  |       ^^^^^^

